--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'grobold';
   src: local('grobold'),
-        url('../fonts/grobold.ttf');
+        url('../fonts/starwisp.ttf');
 }
 
 body {
@@ -39,6 +39,39 @@ button {
 /* ----------------------------------------------- */
 /* clear range styles */
 
+input[type=range] {
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  width: 100%; /* Specific width is required for Firefox. */
+  background: transparent; /* Otherwise white in Chrome */
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+
+input[type=range]:focus {
+  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  cursor: pointer;
+
+  /* Hides the slider so custom styles can be added */
+  background: transparent; 
+  border-color: transparent;
+  color: transparent;
+}
+
+input[type=range]::-moz-range-track {
+  width: 100%;
+  cursor: pointer;
+
+  /* Hides the slider so custom styles can be added */
+  background: transparent; 
+  border-color: transparent;
+  color: transparent;
+}
 
 /* ----------------------------------------------- */
 /* actual style */
@@ -65,6 +98,7 @@ input[type=range]::-moz-range-thumb {
 }
 
 /* track */
+
 
 input[type=range] {
   width: 100%;
